# chatup

./: .gitignore  README.md
chatup/: Chatroom.swift  ChatroomDetail.swift  ChatroomList.swift  ChatroomRow.swift  ContentView.swift  Message.swift  User.swift
chatup-server/: .gitignore  Makefile  README.md
chatup-server/src/: CMakeLists.txt  main.cpp
chatup-ui/: Makefile
chatup-ui/chatup/: AddChatroomView.swift  AuthGrpcInterceptor.swift  ChatroomDetail.swift  ChatroomDetailView.swift  ChatroomList.swift  ChatroomListView.swift  ChatroomRowView.swift  ChatroomsObservable.swift  ContentView.swift  Info.plist  SecureStorage.swift  UserSignInView.swift  chatupApp.swift
chatup-ui/chatup.xcodeproj/: project.pbxproj
chatup-ui/chatup.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
chatup-ui/chatup.xcodeproj/xcuserdata/namaya.xcuserdatad/xcschemes/: xcschememanagement.plist
chatup-ui/chatup/Assets.xcassets/Logo.imageset/: Contents.json
chatup-ui/chatup/Views/: ChatroomDetailView.swift  ChatroomListView.swift  ContentView.swift  MessageInputView.swift  UserSignInView.swift
chatup-ui/chatupUITests/: chatupUITestsLaunchTests.swift
chatup.xcodeproj/: project.pbxproj
chatup.xcodeproj/xcuserdata/namaya.xcuserdatad/xcschemes/: xcschememanagement.plist
chatupTests/: chatupTests.swift
chatupUITests/: chatupUITests.swift
protos/: chatup.proto
